// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders Direct Enrollment banner 1`] = `
<header
  className="hc-c-header hc-c-header--logged-out"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    header.skipNav
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="en"
        />
      </a>
      <Component
        links={
          Array [
            Object {
              "href": "https://www.cuidadodesalud.gov/es/",
              "label": "header.español",
            },
            Object {
              "href": "/login?check_de=1",
              "identifier": "login",
              "label": "header.login",
            },
          ]
        }
        locale="en"
        onMenuToggleClick={[Function]}
        open={false}
      />
    </div>
  </div>
  <Menu
    links={
      Array [
        Object {
          "href": "https://www.cuidadodesalud.gov/es/",
          "label": "header.español",
        },
        Object {
          "href": "/login?check_de=1",
          "identifier": "login",
          "label": "header.login",
        },
      ]
    }
    open={false}
  />
  <Component
    deBrokerName="Foo"
  />
</header>
`;

exports[`Header renders Spanish header 1`] = `
<header
  className="hc-c-header hc-c-header--logged-out"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    header.skipNav
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="es"
        />
      </a>
      <Component
        links={
          Array [
            Object {
              "href": "https://www.healthcare.gov/",
              "label": "header.english",
            },
            Object {
              "href": "/login",
              "identifier": "login",
              "label": "header.login",
            },
          ]
        }
        locale="es"
        onMenuToggleClick={[Function]}
        open={false}
      />
    </div>
  </div>
  <Menu
    links={
      Array [
        Object {
          "href": "https://www.healthcare.gov/",
          "label": "header.english",
        },
        Object {
          "href": "/login",
          "identifier": "login",
          "label": "header.login",
        },
      ]
    }
    open={false}
  />
</header>
`;

exports[`Header renders full/homepage header 1`] = `
<header
  className="hc-c-header hc-c-header--logged-out"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    header.skipNav
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="en"
        />
      </a>
      <Component
        links={
          Array [
            Object {
              "href": "https://www.cuidadodesalud.gov/es/",
              "label": "header.español",
            },
            Object {
              "href": "/login",
              "identifier": "login",
              "label": "header.login",
            },
          ]
        }
        locale="en"
        onMenuToggleClick={[Function]}
        open={false}
      />
    </div>
  </div>
  <Menu
    links={
      Array [
        Object {
          "href": "https://www.cuidadodesalud.gov/es/",
          "label": "header.español",
        },
        Object {
          "href": "/login",
          "identifier": "login",
          "label": "header.login",
        },
      ]
    }
    open={false}
  />
</header>
`;

exports[`Header renders links with absolute URLs if provided a primaryDomain prop 1`] = `
<header
  className="hc-c-header hc-c-header--logged-out"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    header.skipNav
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="https://www.healthcare.gov"
      >
        <Logo
          locale="en"
        />
      </a>
      <Component
        links={
          Array [
            Object {
              "href": "https://www.cuidadodesalud.gov/es/",
              "label": "header.español",
            },
            Object {
              "href": "https://www.healthcare.gov/login",
              "identifier": "login",
              "label": "header.login",
            },
          ]
        }
        locale="en"
        onMenuToggleClick={[Function]}
        open={false}
      />
    </div>
  </div>
  <Menu
    links={
      Array [
        Object {
          "href": "https://www.cuidadodesalud.gov/es/",
          "label": "header.español",
        },
        Object {
          "href": "https://www.healthcare.gov/login",
          "identifier": "login",
          "label": "header.login",
        },
      ]
    }
    open={false}
    primaryDomain="https://www.healthcare.gov"
  />
</header>
`;

exports[`Header renders logged-in header with firstName 1`] = `
<header
  className="hc-c-header hc-c-header--logged-in"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    header.skipNav
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="en"
        />
      </a>
      <Component
        firstName="John"
        links={
          Array [
            Object {
              "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
              "label": "header.myApplicationsAndCoverage",
            },
            Object {
              "href": "/marketplace/auth/global/en_US/myProfile#settings",
              "label": "header.myProfile",
            },
            Object {
              "href": "https://www.cuidadodesalud.gov/es/",
              "label": "header.español",
            },
            Object {
              "href": "/logout",
              "identifier": "logout",
              "label": "header.logout",
            },
          ]
        }
        locale="en"
        loggedIn={true}
        onMenuToggleClick={[Function]}
        open={false}
      />
    </div>
  </div>
  <Menu
    beforeLinks={
      <div
        className="ds-u-sm-display--none ds-u-border-bottom--1 ds-u-margin-x--1 ds-u-padding-y--1 hc-c-header__name"
      >
        John
      </div>
    }
    links={
      Array [
        Object {
          "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
          "label": "header.myApplicationsAndCoverage",
        },
        Object {
          "href": "/marketplace/auth/global/en_US/myProfile#settings",
          "label": "header.myProfile",
        },
        Object {
          "href": "https://www.cuidadodesalud.gov/es/",
          "label": "header.español",
        },
        Object {
          "href": "/logout",
          "identifier": "logout",
          "label": "header.logout",
        },
      ]
    }
    open={false}
  />
</header>
`;

exports[`Header renders logged-in header without firstName 1`] = `
<header
  className="hc-c-header hc-c-header--logged-in"
  role="banner"
>
  <SkipNav
    href="#main"
  >
    header.skipNav
  </SkipNav>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row ds-u-align-items--center ds-u-flex-wrap--nowrap ds-u-padding-y--2"
    >
      <a
        className="hc-c-logo-link ds-l-col ds-l-col--auto"
        href="/"
      >
        <Logo
          locale="en"
        />
      </a>
      <Component
        links={
          Array [
            Object {
              "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
              "label": "header.myApplicationsAndCoverage",
            },
            Object {
              "href": "/marketplace/auth/global/en_US/myProfile#settings",
              "label": "header.myProfile",
            },
            Object {
              "href": "https://www.cuidadodesalud.gov/es/",
              "label": "header.español",
            },
            Object {
              "href": "/logout",
              "identifier": "logout",
              "label": "header.logout",
            },
          ]
        }
        locale="en"
        loggedIn={true}
        onMenuToggleClick={[Function]}
        open={false}
      />
    </div>
  </div>
  <Menu
    links={
      Array [
        Object {
          "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
          "label": "header.myApplicationsAndCoverage",
        },
        Object {
          "href": "/marketplace/auth/global/en_US/myProfile#settings",
          "label": "header.myProfile",
        },
        Object {
          "href": "https://www.cuidadodesalud.gov/es/",
          "label": "header.español",
        },
        Object {
          "href": "/logout",
          "identifier": "logout",
          "label": "header.logout",
        },
      ]
    }
    open={false}
  />
</header>
`;
